<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="T_Bl_LibClient" Id="{dcd4e729-5b69-4433-9e03-e6593c63c58f}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

TYPE T_Bl_LibClient :
STRUCT
	stClient : ARRAY [0..BasLog.cMAX_CLIENTS] OF T_Bl_LibSingleClient; // informationstruct for one client
	usiClientNr : USINT; // number of declared clients
	stHandleRow : ARRAY[0..Queue.cMAX_NR_OF_TASKS]OF T_Bl_LibHandleRow; // handle for access Buffer
	p_fbTimeStamp: POINTER TO FB_TimeStamp; // pointer to FB_TimeStamp 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>