<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="T_Queue_Info" Id="{6e4c0046-cbbe-4224-8937-e2a708659c9d}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

{attribute 'enable_dynamic_creation' := ''}
TYPE T_Queue_Info :
STRUCT
	fbBuffer: FB_MemRingBuffer; // Buffer FB
	udiFillLevel : UDINT; // % actual used buffer size
	pQueueSysInfo: POINTER TO T_Queue_SysInfo; // pointer to sytem struct (parent)
	bolAllocMe:BOOL; //flag gethandle called before init done!!!
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>